force-app/main/default/objects/Case_Activity__c/Case_Activity__c.object-meta.xml
<CustomObject>
    <label>Case Activity</label>
    <nameField>
        <label>Case Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>