force-app/main/default/objects/Case_Activity__c/fields/Activity_Business_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Business_Status__c</fullName>
    <label>Activity Business Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Action</fullName>
            </value>
            <value>
                <fullName>Audit Completed</fullName>
            </value>
            <value>
                <fullName>Audit Findings Documented</fullName>
            </value>
            <value>
                <fullName>Audit Findings In Progress</fullName>
            </value>
            <value>
                <fullName>Audit Not Performed</fullName>
            </value>
            <value>
                <fullName>Audit Scheduled</fullName>
            </value>
            <value>
                <fullName>Case Referral – Administrative Action</fullName>
            </value>
            <value>
                <fullName>Case Referral – Credit Balance</fullName>
            </value>
            <value>
                <fullName>Case Referral – Provider Audit</fullName>
            </value>
            <value>
                <fullName>Case Referral - Recovery</fullName>
                <label>Case Referral – Recovery</label>
            </value>
            <value>
                <fullName>Close Case</fullName>
            </value>
            <value>
                <fullName>Contact Successful</fullName>
            </value>
            <value>
                <fullName>Contact Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Credit Balance Not Verified</fullName>
            </value>
            <value>
                <fullName>Credit Balance Reported</fullName>
            </value>
            <value>
                <fullName>Credit Balance Verified</fullName>
            </value>
            <value>
                <fullName>Credit Balance Worksheet Review</fullName>
            </value>
            <value>
                <fullName>Detailed Risk Score – High</fullName>
            </value>
            <value>
                <fullName>Detailed Risk Score – Low</fullName>
            </value>
            <value>
                <fullName>Detailed Risk Score – Medium</fullName>
            </value>
            <value>
                <fullName>Detailed Risk Score – Not Determined</fullName>
            </value>
            <value>
                <fullName>Document Attempt Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Document Incomplete</fullName>
            </value>
            <value>
                <fullName>Document In Progress</fullName>
            </value>
            <value>
                <fullName>Document Not Received</fullName>
            </value>
            <value>
                <fullName>Document Prepared</fullName>
            </value>
            <value>
                <fullName>Document Received</fullName>
            </value>
            <value>
                <fullName>Document Request Completed</fullName>
            </value>
            <value>
                <fullName>Document Request Verified</fullName>
            </value>
            <value>
                <fullName>Document Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>