force-app/main/default/objects/Case_Activity__c/fields/Activity_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Due_Date__c</fullName>
    <label>Activity Due Date</label>
    <type>Date</type>
</CustomField>