force-app/main/default/objects/Case_Activity__c/fields/Activity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_End_Date__c</fullName>
    <label>Activity End Date</label>
    <type>Date</type>
</CustomField>