force-app/main/default/objects/Case_Activity__c/fields/Activity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Activity_Owner__c</fullName>
    <label>Activity Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Susan M</fullName>
                <default>true</default>
                <label>Susan M</label>
            </value>
            <value>
                <fullName>PI User2</fullName>
            </value>
            <value>
                <fullName>PI User3</fullName>
            </value>
            <value>
                <fullName>PI User4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>