force-app/main/default/objects/Case_Activity__c/fields/Auto_Closure__c.field-meta.xml
<CustomField>
    <fullName>Auto_Closure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Closure</label>
    <type>Checkbox</type>
</CustomField>