force-app/main/default/objects/Case_Activity__c/fields/Case_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Activity_Type__c</fullName>
    <label>Case Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compile Audit Findings</fullName>
            </value>
            <value>
                <fullName>Confirm Credit Balance</fullName>
            </value>
            <value>
                <fullName>Contact Provider</fullName>
            </value>
            <value>
                <fullName>Dispose Case</fullName>
            </value>
            <value>
                <fullName>Identify Samples for Audit</fullName>
            </value>
            <value>
                <fullName>Perform Audit</fullName>
            </value>
            <value>
                <fullName>Perform Detailed Risk Assessment</fullName>
            </value>
            <value>
                <fullName>Perform Initial Risk Assessment</fullName>
            </value>
            <value>
                <fullName>Perform Provider &amp; Claims data research</fullName>
            </value>
            <value>
                <fullName>Perform Review</fullName>
            </value>
            <value>
                <fullName>Prepare Addendum – A for Provider</fullName>
            </value>
            <value>
                <fullName>Receive and Track Credit Balance</fullName>
            </value>
            <value>
                <fullName>Receive Document</fullName>
            </value>
            <value>
                <fullName>Request for Document (Addendum-A)</fullName>
            </value>
            <value>
                <fullName>Schedule Audit</fullName>
            </value>
            <value>
                <fullName>Send Demand Letter</fullName>
            </value>
            <value>
                <fullName>Verify Provider Billing Issues</fullName>
            </value>
            <value>
                <fullName>Perform Site Audit</fullName>
            </value>
            <value>
                <fullName>Provider on-Hold</fullName>
            </value>
            <value>
                <fullName>Test Activity 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>