force-app/main/default/objects/Case_Activity__c/fields/Case_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Case_Supervisor__c</fullName>
    <formula>Case__r.Case_Supervisor__r.User_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Supervisor</label>
    <type>Text</type>
</CustomField>