force-app/main/default/objects/Case_Activity__c/fields/Case_Supervisor_User__c.field-meta.xml
<CustomField>
    <fullName>Case_Supervisor_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Supervisor User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>