force-app/main/default/objects/Case_Activity__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provider_Audit_Onsite</fullName>
                <label>Provider Audit-Onsite</label>
            </value>
            <value>
                <fullName>Credit_Balance_Recoupment</fullName>
                <label>Credit – Balance Recoupment</label>
            </value>
            <value>
                <fullName>Provider Audit-Desktop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>