force-app/main/default/objects/Case_Activity__c/fields/Case_Type_V1__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_V1__c</fullName>
    <formula>TEXT(Case__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Type</label>
    <type>Text</type>
</CustomField>