force-app/main/default/objects/Case_Activity__c/fields/Credit_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Balance_Amount__c</fullName>
    <label>Credit Balance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>