force-app/main/default/objects/Case_Activity__c/fields/Detailed_Risk_Probability__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Risk_Probability__c</fullName>
    <label>Detailed Risk Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>