force-app/main/default/objects/Case_Activity__c/fields/Disposal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Notes__c</fullName>
    <label>Disposal Notes</label>
    <type>TextArea</type>
</CustomField>