force-app/main/default/objects/Case_Activity__c/fields/Hold_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_From_Date__c</fullName>
    <label>Hold From Date</label>
    <type>Date</type>
</CustomField>