force-app/main/default/objects/Case_Activity__c/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <label>Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI Findings</fullName>
            </value>
            <value>
                <fullName>Administrative Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>