force-app/main/default/objects/Case_Activity__c/fields/Hold_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_To_Date__c</fullName>
    <label>Hold To Date</label>
    <type>Date</type>
</CustomField>