force-app/main/default/objects/Case_Activity__c/fields/Initial_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Review_Date__c</fullName>
    <description>Used in Perform Review</description>
    <label>Initial Review Date</label>
    <type>Date</type>
</CustomField>