force-app/main/default/objects/Case_Activity__c/fields/Initial_Risk_Probability__c.field-meta.xml
<CustomField>
    <fullName>Initial_Risk_Probability__c</fullName>
    <label>Initial Risk Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>