force-app/main/default/objects/Case_Activity__c/fields/Provider_Email__c.field-meta.xml
<CustomField>
    <fullName>Provider_Email__c</fullName>
    <label>Provider Email</label>
    <type>Email</type>
</CustomField>