force-app/main/default/objects/Case_Activity__c/fields/Random_Sample__c.field-meta.xml
<CustomField>
    <fullName>Random_Sample__c</fullName>
    <label>Random Sample</label>
    <length>200</length>
    <type>Text</type>
</CustomField>