force-app/main/default/objects/Case_Activity__c/fields/Sampling_Method__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Method__c</fullName>
    <label>Sampling Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Random Sample</fullName>
            </value>
            <value>
                <fullName>Targeted Sample</fullName>
            </value>
            <value>
                <fullName>100% Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>