force-app/main/default/objects/Case_Activity__c/fields/Secondary_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Review_Date__c</fullName>
    <description>Used in Perform Review</description>
    <label>Secondary Review Date</label>
    <type>Date</type>
</CustomField>