force-app/main/default/objects/Case_Activity__c/fields/Site_Visit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Notes__c</fullName>
    <label>Site Visit Notes</label>
    <type>TextArea</type>
</CustomField>