force-app/main/default/objects/Case_Activity__c/fields/Supervisor_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Approval_Status__c</fullName>
    <label>Supervisor Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Applicable</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>