force-app/main/default/objects/Case_Activity__c/fields/Targeted_Sample__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Sample__c</fullName>
    <label>Targeted Sample</label>
    <length>200</length>
    <type>Text</type>
</CustomField>