force-app/main/default/objects/Case_Activity__c/fields/X100_Audit__c.field-meta.xml
<CustomField>
    <fullName>X100_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>100% Audit</label>
    <type>Checkbox</type>
</CustomField>