force-app/main/default/objects/Case_Activity__c/recordTypes/Compile_Audit_Findings.recordType-meta.xml
<RecordType>
    <fullName>Compile_Audit_Findings</fullName>
    <active>true</active>
    <description>Provider Audit-Onsite - Compile Audit Findings</description>
    <label>Compile Audit Findings</label>
</RecordType>