force-app/main/default/objects/Case_Activity__c/recordTypes/Confirm_Credit_Balance.recordType-meta.xml
<RecordType>
    <fullName>Confirm_Credit_Balance</fullName>
    <active>true</active>
    <description>Credit Balance Reporting  - Confirm Credit Balance</description>
    <label>Confirm Credit Balance</label>
</RecordType>