force-app/main/default/objects/Case_Activity__c/recordTypes/Contact_Provider.recordType-meta.xml
<RecordType>
    <fullName>Contact_Provider</fullName>
    <active>true</active>
    <description>Credit Balance Reporting - Contact Provider</description>
    <label>Contact Provider</label>
</RecordType>