force-app/main/default/objects/Case_Activity__c/recordTypes/Determine_Provider_Actions.recordType-meta.xml
<RecordType>
    <fullName>Determine_Provider_Actions</fullName>
    <active>true</active>
    <label>Determine Provider Actions</label>
</RecordType>