force-app/main/default/objects/Case_Activity__c/recordTypes/Dispose_Case.recordType-meta.xml
<RecordType>
    <fullName>Dispose_Case</fullName>
    <active>true</active>
    <description>Credit Balance Reporting  &amp; Provider Audit-Onsite - Dispose Case</description>
    <label>Dispose Case</label>
</RecordType>