force-app/main/default/objects/Case_Activity__c/recordTypes/Evaluate_Audit_Findings.recordType-meta.xml
<RecordType>
    <fullName>Evaluate_Audit_Findings</fullName>
    <active>true</active>
    <label>Evaluate Audit Findings</label>
</RecordType>