force-app/main/default/objects/Case_Activity__c/recordTypes/Evaluate_Provider_Findings.recordType-meta.xml
<RecordType>
    <fullName>Evaluate_Provider_Findings</fullName>
    <active>true</active>
    <label>Evaluate Provider Findings</label>
</RecordType>