force-app/main/default/objects/Case_Activity__c/recordTypes/Identify_Samples_for_Audit.recordType-meta.xml
<RecordType>
    <fullName>Identify_Samples_for_Audit</fullName>
    <active>true</active>
    <description>Provider Audit-Onsite - Identify Samples for Audit</description>
    <label>Identify Samples for Audit</label>
</RecordType>