force-app/main/default/objects/Case_Activity__c/recordTypes/Identify_Samples_Methodology_for_Audit.recordType-meta.xml
<RecordType>
    <fullName>Identify_Samples_Methodology_for_Audit</fullName>
    <active>true</active>
    <label>Identify Samples &amp; Methodology for Audit</label>
</RecordType>