force-app/main/default/objects/Case_Activity__c/recordTypes/Notification_of_Audit_Decision.recordType-meta.xml
<RecordType>
    <fullName>Notification_of_Audit_Decision</fullName>
    <active>true</active>
    <label>Notification of Audit Decision</label>
</RecordType>