force-app/main/default/objects/Case_Activity__c/recordTypes/Open.recordType-meta.xml
<RecordType>
    <fullName>Open</fullName>
    <active>true</active>
    <label>Open</label>
</RecordType>