force-app/main/default/objects/Case_Activity__c/recordTypes/Perform_Audit.recordType-meta.xml
<RecordType>
    <fullName>Perform_Audit</fullName>
    <active>true</active>
    <description>Provider Audit-Onsite - Perform Audit</description>
    <label>Perform Audit</label>
</RecordType>