force-app/main/default/objects/Case_Activity__c/recordTypes/Perform_Detailed_Risk_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Perform_Detailed_Risk_Assessment</fullName>
    <active>true</active>
    <description>Provider Audit-Onsite - Perform Detailed Risk Assessment</description>
    <label>Perform Detailed Risk Assessment</label>
</RecordType>