force-app/main/default/objects/Case_Activity__c/recordTypes/Perform_DHSS_PI_Review_Audit.recordType-meta.xml
<RecordType>
    <fullName>Perform_DHSS_PI_Review_Audit</fullName>
    <active>true</active>
    <label>Perform DHSS PI Review/Audit</label>
</RecordType>