force-app/main/default/objects/Case_Activity__c/recordTypes/Perform_Initial_Risk_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Perform_Initial_Risk_Assessment</fullName>
    <active>true</active>
    <description>Provider Audit-Onsite - Perform Initial Risk Assessment</description>
    <label>Perform Initial Risk Assessment</label>
</RecordType>