force-app/main/default/objects/Case_Activity__c/recordTypes/Perform_Provider_Claims_Data_Research.recordType-meta.xml
<RecordType>
    <fullName>Perform_Provider_Claims_Data_Research</fullName>
    <active>true</active>
    <description>Provider Audit-Onsite - Perform Provider &amp; Claims Data Research</description>
    <label>Perform Provider &amp; Claims Data Research</label>
</RecordType>