force-app/main/default/objects/Case_Activity__c/recordTypes/Perform_Provider_Self_Review.recordType-meta.xml
<RecordType>
    <fullName>Perform_Provider_Self_Review</fullName>
    <active>true</active>
    <label>Perform Provider Self Review</label>
</RecordType>