force-app/main/default/objects/Case_Activity__c/recordTypes/Perform_Review.recordType-meta.xml
<RecordType>
    <fullName>Perform_Review</fullName>
    <active>true</active>
    <label>Perform Review</label>
</RecordType>