force-app/main/default/objects/Case_Activity__c/recordTypes/Perform_site_Audit.recordType-meta.xml
<RecordType>
    <fullName>Perform_site_Audit</fullName>
    <active>true</active>
    <description>Perform site Audit</description>
    <label>Perform site Audit</label>
</RecordType>