force-app/main/default/objects/Case_Activity__c/recordTypes/Prepare_Addendum_A_for_Provider.recordType-meta.xml
<RecordType>
    <fullName>Prepare_Addendum_A_for_Provider</fullName>
    <active>true</active>
    <description>Credit Balance Reporting - Prepare Addendum-A for Provider</description>
    <label>Prepare Addendum-A for Provider</label>
</RecordType>