force-app/main/default/objects/Case_Activity__c/recordTypes/Provider_Appeal.recordType-meta.xml
<RecordType>
    <fullName>Provider_Appeal</fullName>
    <active>true</active>
    <label>Provider Appeal</label>
</RecordType>