force-app/main/default/objects/Case_Activity__c/recordTypes/Provider_on_Hold.recordType-meta.xml
<RecordType>
    <fullName>Provider_on_Hold</fullName>
    <active>true</active>
    <label>Provider on-Hold</label>
</RecordType>