force-app/main/default/objects/Case_Activity__c/recordTypes/Receive_Document.recordType-meta.xml
<RecordType>
    <fullName>Receive_Document</fullName>
    <active>true</active>
    <description>Credit Balance Reporting - Receive Document</description>
    <label>Receive Document</label>
</RecordType>