force-app/main/default/objects/Case_Activity__c/recordTypes/Receive_Track_Credit_Balance.recordType-meta.xml
<RecordType>
    <fullName>Receive_Track_Credit_Balance</fullName>
    <active>true</active>
    <description>Credit Balance Reporting - Receive &amp; Track Credit Balance</description>
    <label>Receive &amp; Track Credit Balance</label>
</RecordType>