force-app/main/default/objects/Case_Activity__c/recordTypes/Reconsideration.recordType-meta.xml
<RecordType>
    <fullName>Reconsideration</fullName>
    <active>true</active>
    <label>Reconsideration</label>
</RecordType>