force-app/main/default/objects/Case_Activity__c/recordTypes/Recoupment_Financial_Tracking.recordType-meta.xml
<RecordType>
    <fullName>Recoupment_Financial_Tracking</fullName>
    <active>true</active>
    <label>Recoupment/Financial Tracking</label>
</RecordType>