force-app/main/default/objects/Case_Activity__c/recordTypes/Request_for_Document.recordType-meta.xml
<RecordType>
    <fullName>Request_for_Document</fullName>
    <active>true</active>
    <description>Credit Balance Reporting - Request for Document</description>
    <label>Request for Document</label>
</RecordType>