force-app/main/default/objects/Case_Activity__c/recordTypes/Schedule_Audit.recordType-meta.xml
<RecordType>
    <fullName>Schedule_Audit</fullName>
    <active>true</active>
    <description>Provider Audit-Onsite - Schedule Audit</description>
    <label>Schedule Audit</label>
</RecordType>