force-app/main/default/objects/Case_Activity__c/recordTypes/TBasic.recordType-meta.xml
<RecordType>
    <fullName>TBasic</fullName>
    <active>true</active>
    <description>basic</description>
    <label>TBasic</label>
</RecordType>