force-app/main/default/objects/Case_Activity__c/recordTypes/Test_Activity_1.recordType-meta.xml
<RecordType>
    <fullName>Test_Activity_1</fullName>
    <active>true</active>
    <label>Test Activity 1</label>
</RecordType>