force-app/main/default/objects/Case_Activity__c/recordTypes/Verify_Provider_Billing_Issues.recordType-meta.xml
<RecordType>
    <fullName>Verify_Provider_Billing_Issues</fullName>
    <active>true</active>
    <description>Credit Balance Reporting - Verify Provider Billing Issues</description>
    <label>Verify Provider Billing Issues</label>
</RecordType>