force-app/main/default/objects/Case_Activity__c/validationRules/ABSisMandatoryforActivityClosure.validationRule-meta.xml
<ValidationRule>
    <fullName>ABSisMandatoryforActivityClosure</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Completed&apos;), ISBLANK(TEXT(Activity_Business_Status__c)))</errorConditionFormula>
    <errorDisplayField>Activity_Business_Status__c</errorDisplayField>
    <errorMessage>Activity Business Status is required</errorMessage>
</ValidationRule>