force-app/main/default/objects/Case_Activity__c/validationRules/Case_Act_Name_Should_Not_be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Act_Name_Should_Not_be_Changed</fullName>
    <active>true</active>
    <description>Case activity name should not be changed once created.</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(Name)</errorConditionFormula>
    <errorMessage>Case Activity Name should not be changed, please redo the changes.</errorMessage>
</ValidationRule>