force-app/main/default/objects/Case_Activity__c/validationRules/Closed_Case_Can_Not_Be_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Case_Can_Not_Be_Change</fullName>
    <active>false</active>
    <description>Field Values Can&apos;t Be Change After Case Closure</description>
    <errorConditionFormula>IF(AND(ISCHANGED(Status__c),($User.Id != Case__r.Case_Supervisor__r.Id),ISPICKVAL(PRIORVALUE(Status__c),&quot;Completed&quot;)) , TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Field values cannot be changed after case closure</errorMessage>
</ValidationRule>