force-app/main/default/objects/Case_Activity__c/validationRules/Disabled_CaseAct_Should_not_be_Modified.validationRule-meta.xml
<ValidationRule>
    <fullName>Disabled_CaseAct_Should_not_be_Modified</fullName>
    <active>true</active>
    <errorConditionFormula>IsEnabled__c == FALSE &amp;&amp; NOT(ISNEW()) &amp;&amp;  Auto_Closure__c == FALSE</errorConditionFormula>
    <errorMessage>Cannot modify the case activity as it is not enabled</errorMessage>
</ValidationRule>