force-app/main/default/objects/Case_Activity__c/validationRules/SupervisorApprovalisNeedforActivitCompl.validationRule-meta.xml
<ValidationRule>
    <fullName>SupervisorApprovalisNeedforActivitCompl</fullName>
    <active>true</active>
    <description>Supervisor Approval is Need for Activity Completion</description>
    <errorConditionFormula>AND(Auto_Closure__c = FALSE,NOT(ISPICKVAL(Supervisor_Approval_Status__c,&apos;Approved&apos;)),ISPICKVAL(Status__c,&apos;Completed&apos;),OR(ISPICKVAL(Case_Activity_Type__c,&apos;Identify Samples &amp; Methodology for Audit&apos;), ISPICKVAL(Case_Activity_Type__c,&apos;Determine Provider Actions&apos;), ISPICKVAL(Case_Activity_Type__c,&apos;Dispose Case&apos;), ISPICKVAL(Case_Activity_Type__c,&apos;Evaluate Audit Findings&apos;), ISPICKVAL(Case_Activity_Type__c,&apos;Recoupment/Financial Tracking&apos;)))</errorConditionFormula>
    <errorMessage>You are not allowed to complete the case without supervisor approval</errorMessage>
</ValidationRule>